# coreai-catalog

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  GOVERNANCE.md  PRIVACY.md  PROJECT_PHILOSOPHY.md  README.md  SECURITY.md  agent.json  artifacts.yaml  benchmarks.jsonl  benchmarks.yaml  catalog.yaml  chips.yaml  llms-full.txt  llms.txt  openapi.yaml  pyproject.toml  requirements.txt  sources.yaml  terms.yaml  upstreams.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  relay-pubkey.pem
artifacts/: README.md  official-gemma.yaml  official-mistral.yaml  official-qwen.yaml  q35.yaml  q36-27b.yaml  q36-moe.yaml
benchmarks/: protocol-config.json
coreai_catalog/: __init__.py  __main__.py  api.py  bench.py  catalog.py  cli.py  contribute.py  discover.py  exports.py  formatters.py  installer.py  publish.py  task_pages.py  transform_graph.py
data/: artifacts.yaml.b64.part1  runtime-verifications.jsonl
docs/: anchor-cohort.md  apple-terminology-map.md  artifact-provenance.md  benchmark-map.md  benchmark-protocol.md  capability-matrix.md  community-watchlist.md  competitive-analysis.md  data-model.md  generated-files.md  getting-started.md  hf-g4-e2b.md  huggingface-official-gpt-oss.md  huggingface-official-links.md  huggingface-zoo-embedding-links.md  huggingface-zoo-granite-links.md  huggingface-zoo-lfm-links.md  huggingface-zoo-llm-links-1.md  huggingface-zoo-llm-links-2.md  huggingface-zoo-llm-links-3.md  huggingface-zoo-ocr-audio-links.md  huggingface-zoo-qwen-rag-links.md  huggingface-zoo-vlm-links.md  index.md  model-details.md  model-registry.md  privacy-policy.md  runtime-matrix.md  sota-maintenance.md  source-map.md  test-hf-link.md  upstream-map.md  v0.3-verification.md
examples/: README.md
mcp_server/: __init__.py  sanitize.py  server.py
schema/: artifact.schema.json  benchmark.schema.json  model.schema.json  term.schema.json  upstream.schema.json
scripts/: audit.py  backfill_digests.py  bootstrap_io_contracts.py  check_counts.py  check_sources.sh  deep_audit.py  derive_fields.py  discover.py  doc_test.py  export_json.py  export_search.py  generate.py  generate_artifact_docs.py  generate_benchmarks_aggregate.py  generate_compare.py  generate_docs.py  generate_example_tables.py  generate_index.py  generate_templates.py  generate_terms_docs.py  injection_lint.py  migrate_benchmarks_to_jsonl.py  outlier_check.py  physics_check.py  query.py  readiness_score.py  recommend.py  refresh_signals.py  sign_benchmark.py  source_monitor.py  sync_package_data.py  sync_upstream.py  validate.py  validate_benchmark.py  validate_benchmark_entry.py  validate_links.py  validate_sources.py  verify_benchmark_signature.py  verify_devicecheck.py
site/: app.js  index.html  style.css
templates/: artifact-entry.yaml  benchmark-entry.jsonl  model-entry.yaml
tests/: test_benchmark_pipeline.py  (+22 more)
(+153 files in other folders)
