[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreai-catalog"
version = "1.0.0"
description = "The easiest way to discover, verify, and install Apple Core AI models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.scripts]
coreai-catalog = "coreai_catalog.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
coreai_catalog = ["data/*.json"]
